--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-svg": "13.4.0",
     "styled-components": "^5.3.6",
     "typescript": "^4.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/styled-components-react-native": "^5.2.1"
+    "@types/styled-components-react-native": "^5.2.1",
+    "react-native-svg-transformer": "^1.0.0"
   },
   "private": true
 }
