--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@expo-google-fonts/archivo": "^0.2.2",
     "@expo-google-fonts/inter": "^0.2.2",
+    "@react-navigation/native": "^6.2.5",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/stack": "^6.3.16",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
     "expo": "~47.0.12",
@@ -20,9 +23,11 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-calendars": "^1.1294.0",
-    "react-native-gesture-handler": "^2.9.0",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
     "styled-components": "^5.3.6",
     "typescript": "^4.6.3"
