--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "api": "json-server ./src/services/server.json --host 192.168.1.15 --port 3333 --delay 700"
   },
   "dependencies": {
     "@expo-google-fonts/archivo": "^0.2.2",
@@ -16,6 +17,7 @@
     "@react-navigation/stack": "^6.3.16",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
+    "axios": "^1.3.4",
     "expo": "~47.0.12",
     "expo-font": "~11.0.1",
     "expo-splash-screen": "~0.17.5",
